# core-defunct

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config
application-support/: Cargo.toml
application-support/src/: io_peripherals.rs  lib.rs  shim_support.rs
application-support/src/event_loop/: mod.rs
application-support/src/init/: board.rs  mod.rs  sim.rs  sim_rpc.rs  websocket.rs
baseline-sim/: Cargo.toml
baseline-sim/src/: interp.rs  lib.rs  mem_mapped.rs  sim.rs
baseline-sim/tests/: interp.rs  single_instructions.rs
baseline-sim/tests/device_register_tests/: mod.rs
baseline-sim/tests/device_register_tests/mem_mapped/: clock.rs  gpio.rs  output.rs  pwm.rs  timers.rs
baseline-sim/tests/mmapped_peripheral_tests/: mod.rs
baseline-sim/tests/mmapped_peripheral_tests/mem_mapped/: adc.rs  gpio.rs  input.rs  timers.rs
baseline-sim/tests/mmapped_peripheral_tests/memory_mapped/: adc.rs  gpio.rs  input.rs  mod.rs  timers.rs
benches/: common.rs  io.rs  overhead.rs  speed.rs
device-support/: Cargo.toml
device-support/example/: simple_test_experiment.rs
device-support/examples/: bbqueue.rs  mockup.rs  simple_test_experiment.rs
device-support/src/: lib.rs
device-support/src/memory/: simple.rs
device-support/src/peripherals/: adc.rs  clock.rs  input.rs  mod.rs  output.rs  pwm.rs  timer.rs
device-support/src/rpc/: mod.rs
device-support/src/rpc/encoding/: mod.rs  postcard.rs  slip.rs
device-support/src/rpc/transport/: mod.rs  uart_dma.rs  uart_host.rs  uart_simple.rs
device-support/src/rpc/transport/multiplexed/: mod.rs
device-support/src/rpc/transport/uart_simple/: device.rs  host.rs  mod.rs
device-support/src/util/: fifo.rs  interrupt_flags.rs  misc.rs  mod.rs
isa/: Cargo.toml
isa/src/: isa.rs  lib.rs  macros.rs  misc.rs  util.rs
isa/tests/: macros.rs
macros/: Cargo.toml
macros/src/: lib.rs
misc/lc3-tm4c/: Cargo.toml
misc/serial/: Cargo.toml
misc/serial2/: Cargo.toml
misc/serial2/src/: main.rs
os/: Cargo.toml
os/src/: lib.rs  os.rs  traps.rs
os/tests/: enter_user_mode.rs  smoke.rs
os/tests/trap_tests/traps/: adc.rs  clock.rs  gpio.rs  mod.rs  output.rs  pwm.rs  timers.rs
shims/: Cargo.toml
shims/src/: lib.rs
shims/src/memory/: file_backed.rs  simple.rs
shims/src/peripherals/: adc.rs  clock.rs  gpio.rs  input.rs  mod.rs  output.rs  pwm.rs  timers.rs
test-infrastructure/: Cargo.toml
test-infrastructure/src/: lib.rs  macros.rs  runner.rs
test-infrastructure/src/lc3tools/: macros.rs  runner.rs
traits/: Cargo.toml
traits/src/: error.rs  lib.rs  memory.rs
traits/src/control/: control.rs  load.rs  metadata.rs  snapshot.rs
traits/src/control/rpc/: controller.rs  device.rs  encoding.rs  messages.rs  transport.rs
traits/src/peripherals/: adc.rs  clock.rs  gpio.rs  input.rs  mod.rs  notes.rs  output.rs  pwm.rs  stubs.rs  support.rs  timers.rs
