[package]
name = "lc3-baseline-sim"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2021"

workspace = ".."

description = "An instruction level simulator for the LC-3."
homepage = "https://utp.tools"
repository = "http://github.com/ut-utp/prototype"

readme = "README.md"

keywords = ["lc-3", "simulator", "utp"]
categories = ["no-std", "simulation"]

license = "MPL-2.0"


[badges]
github-actions = { repository = "ut-utp/prototype", workflow = "baseline-sim" }
codecov = { repository = "ut-utp/prototype", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/prototype" }
is-it-maintained-open-issues = { repository = "ut-utp/prototype" }
maintenance = { status = "actively-developed" }


[dependencies]
lc3-isa = { path = "../isa", version = "0.1.0", default-features = false }
lc3-macros = { path = "../macros", version = "0.1.0" }
lc3-traits = { path = "../traits", version = "0.1.0", default-features = false }
static_assertions = "1.1.0"

[dev-dependencies]
lc3-test-infrastructure = { path = "../test-infrastructure", version = "0.1.0" }
itertools = "0.10"


[[test]]
name = "mem_mapped"
path = "tests/mmapped_peripheral_tests/mod.rs"


[features]
default = []
std = ["lc3-traits/std", "lc3-isa/std"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "wasm32-unknown-unknown", "thumbv7em-none-eabihf"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
rustdoc-args = ["--cfg", "docs"] # "--scrape-tests"
all-features = true
default-target = "x86_64-unknown-linux-gnu"
