[package]
name = "serial"
version = "0.1.0"
authors = ["Rahul Butani <rr.butani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "4.3.3"
tokio = { version = "1.8.4", features = [ "io-util", "macros" ] }
